--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+div ~ a{
+  padding: 10px;   
+  background-color: grey;
+
+}
+
+
+figcaption{
+  font-size: small;
+  text-align: center;
+}
+#featured-property > p{
+  text-align: center;
+  padding:10px;
+  margin: 10px ;
+
+}
+#details div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
